--- a/Basics/WebScrappingTest.ipynb
+++ b/Basics/WebScrappingTest.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,14 +39,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>GDP (USD Million)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>26854599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>China</td>\n",
+       "      <td>19373586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Japan</td>\n",
+       "      <td>4409738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>4308854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>India</td>\n",
+       "      <td>3736882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>3158938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>France</td>\n",
+       "      <td>2923489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>2169745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>2089672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2081235</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Country GDP (USD Million)\n",
+       "1    United States          26854599\n",
+       "2            China          19373586\n",
+       "3            Japan           4409738\n",
+       "4          Germany           4308854\n",
+       "5            India           3736882\n",
+       "6   United Kingdom           3158938\n",
+       "7           France           2923489\n",
+       "8            Italy           2169745\n",
+       "9           Canada           2089672\n",
+       "10          Brazil           2081235"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tables = pd.read_html(URL)\n",
     "df = tables[3]\n",
-    "\n",
-    "df.columns = range(df.shape[1])\n"
+    "#Replace the column headers with column numbers\n",
+    "df.columns = range(df.shape[1])\n",
+    "df = df[[0,2]]\n",
+    "df = df[1:11]\n",
+    "#alternative df = df.iloc[1:11,:]\n",
+    "df.columns = [\"Country\",\"GDP (USD Million)\"]\n",
+    "df1 = df[\"GDP (USD Million)\"]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>GDP (USD Million)</th>\n",
+       "      <th>GDP (USB Billions)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>26854599</td>\n",
+       "      <td>26855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>China</td>\n",
+       "      <td>19373586</td>\n",
+       "      <td>19374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Japan</td>\n",
+       "      <td>4409738</td>\n",
+       "      <td>4410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>4308854</td>\n",
+       "      <td>4309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>India</td>\n",
+       "      <td>3736882</td>\n",
+       "      <td>3737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>3158938</td>\n",
+       "      <td>3159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>France</td>\n",
+       "      <td>2923489</td>\n",
+       "      <td>2923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>2169745</td>\n",
+       "      <td>2170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>2089672</td>\n",
+       "      <td>2090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>2081235</td>\n",
+       "      <td>2081</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Country GDP (USD Million)  GDP (USB Billions)\n",
+       "1    United States          26854599               26855\n",
+       "2            China          19373586               19374\n",
+       "3            Japan           4409738                4410\n",
+       "4          Germany           4308854                4309\n",
+       "5            India           3736882                3737\n",
+       "6   United Kingdom           3158938                3159\n",
+       "7           France           2923489                2923\n",
+       "8            Italy           2169745                2170\n",
+       "9           Canada           2089672                2090\n",
+       "10          Brazil           2081235                2081"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = df[\"GDP (USD Million)\"]\n",
+    "df1 = df1.astype(int)\n",
+    "df1 = (np.round(df1/1000)).astype(int)\n",
+    "df.insert(2, \"GDP (USB Billions)\" ,df1)\n",
+    "df"
    ]
   },
   {
@@ -54,7 +282,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Alternative Solution\n",
+    "df['GDP (Million USD)'] = df['GDP (Million USD)'].astype(int)\n",
+    "\n",
+    "# Convert the GDP value in Million USD to Billion USD\n",
+    "df[['GDP (Million USD)']] = df[['GDP (Million USD)']]/1000\n",
+    "\n",
+    "# Use numpy.round() method to round the value to 2 decimal places.\n",
+    "df[['GDP (Million USD)']] = np.round(df[['GDP (Million USD)']], 2)\n",
+    "\n",
+    "# Rename the column header from 'GDP (Million USD)' to 'GDP (Billion USD)'\n",
+    "df.rename(columns = {'GDP (Million USD)' : 'GDP (Billion USD)'})"
+   ]
   }
  ],
  "metadata": {
