--- a/Python Data Visualization/Interactable_Dash.ipynb
+++ b/Python Data Visualization/Interactable_Dash.ipynb
@@ -2,6 +2,319 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "import plotly.graph_objects as go\n",
+    "import dash\n",
+    "from dash import dcc\n",
+    "from dash import html\n",
+    "from dash.dependencies import Input, Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Quarter</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>DayofMonth</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>FlightDate</th>\n",
+       "      <th>Reporting_Airline</th>\n",
+       "      <th>DOT_ID_Reporting_Airline</th>\n",
+       "      <th>IATA_CODE_Reporting_Airline</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Div4WheelsOff</th>\n",
+       "      <th>Div4TailNum</th>\n",
+       "      <th>Div5Airport</th>\n",
+       "      <th>Div5AirportID</th>\n",
+       "      <th>Div5AirportSeqID</th>\n",
+       "      <th>Div5WheelsOn</th>\n",
+       "      <th>Div5TotalGTime</th>\n",
+       "      <th>Div5LongestGTime</th>\n",
+       "      <th>Div5WheelsOff</th>\n",
+       "      <th>Div5TailNum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1295781</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1998-04-02</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>19930</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1125375</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013-05-13</td>\n",
+       "      <td>EV</td>\n",
+       "      <td>20366</td>\n",
+       "      <td>EV</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>118824</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1993-09-25</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>19977</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>634825</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1994-11-12</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>19991</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1888125</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2017-08-17</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>19977</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 110 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  Year  Quarter  Month  DayofMonth  DayOfWeek  FlightDate  \\\n",
+       "0     1295781  1998        2      4           2          4  1998-04-02   \n",
+       "1     1125375  2013        2      5          13          1  2013-05-13   \n",
+       "2      118824  1993        3      9          25          6  1993-09-25   \n",
+       "3      634825  1994        4     11          12          6  1994-11-12   \n",
+       "4     1888125  2017        3      8          17          4  2017-08-17   \n",
+       "\n",
+       "  Reporting_Airline  DOT_ID_Reporting_Airline IATA_CODE_Reporting_Airline  \\\n",
+       "0                AS                     19930                          AS   \n",
+       "1                EV                     20366                          EV   \n",
+       "2                UA                     19977                          UA   \n",
+       "3                HP                     19991                          HP   \n",
+       "4                UA                     19977                          UA   \n",
+       "\n",
+       "   ... Div4WheelsOff  Div4TailNum  Div5Airport  Div5AirportID  \\\n",
+       "0  ...           NaN          NaN          NaN            NaN   \n",
+       "1  ...           NaN          NaN          NaN            NaN   \n",
+       "2  ...           NaN          NaN          NaN            NaN   \n",
+       "3  ...           NaN          NaN          NaN            NaN   \n",
+       "4  ...           NaN          NaN          NaN            NaN   \n",
+       "\n",
+       "   Div5AirportSeqID Div5WheelsOn Div5TotalGTime Div5LongestGTime  \\\n",
+       "0               NaN          NaN            NaN              NaN   \n",
+       "1               NaN          NaN            NaN              NaN   \n",
+       "2               NaN          NaN            NaN              NaN   \n",
+       "3               NaN          NaN            NaN              NaN   \n",
+       "4               NaN          NaN            NaN              NaN   \n",
+       "\n",
+       "   Div5WheelsOff Div5TailNum  \n",
+       "0            NaN         NaN  \n",
+       "1            NaN         NaN  \n",
+       "2            NaN         NaN  \n",
+       "3            NaN         NaN  \n",
+       "4            NaN         NaN  \n",
+       "\n",
+       "[5 rows x 110 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#reading data\n",
+    "airline_data =  pd.read_csv('https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DV0101EN-SkillsNetwork/Data%20Files/airline_data.csv', \n",
+    "                            encoding = \"ISO-8859-1\",\n",
+    "                            dtype={'Div1Airport': str, 'Div1TailNum': str, \n",
+    "                                   'Div2Airport': str, 'Div2TailNum': str})\n",
+    "airline_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app = dash.Dash(__name__)\n",
+    "app.layout = html.Div(children=[ html.H1('Airline Performance Dashboard',style={'textAlign': 'center', 'color': '#503D36', 'font-size': 30}),\n",
+    "                                html.Div([\"Input Year: \", dcc.Input(id='input-year', value='2010', \n",
+    "                                type='number', style={'height':'20px', 'font-size': 15}),], \n",
+    "                                style={'font-size': 15}),\n",
+    "                                html.Br(),\n",
+    "                                html.Br(),\n",
+    "                                html.Div(dcc.Graph(id='line-plot')),\n",
+    "                                ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.callback( Output(component_id='line-plot', component_property='figure'),\n",
+    "               Input(component_id='input-year', component_property='value'))\n",
+    "\n",
+    "# Add computation to callback function and return graph\n",
+    "def get_graph(entered_year):\n",
+    "    # Select 2019 data\n",
+    "    df =  airline_data[airline_data['Year']==int(entered_year)]\n",
+    "    \n",
+    "    # Group the data by Month and compute average over arrival delay time.\n",
+    "    line_data = df.groupby('Month')['ArrDelay'].mean().reset_index()\n",
+    "    fig = go.Figure(data=go.Scatter(x=line_data['Month'], y=line_data['ArrDelay'], mode='lines', marker=dict(color='green')))\n",
+    "    fig.update_layout(title='Month vs Average Flight Delay Time', xaxis_title='Month', yaxis_title='ArrDelay')\n",
+    "    return fig\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fcf2308ffd0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    app.run_server()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +322,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py310",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
