--- a/Python Data Visualization/WildFire-Dashboard.ipynb
+++ b/Python Data Visualization/WildFire-Dashboard.ipynb
@@ -2,6 +2,145 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import dash\n",
+    "from dash import html, dcc\n",
+    "from dash.dependencies import Input, Output, State\n",
+    "import plotly.graph_objects as go\n",
+    "import plotly.express as px\n",
+    "from dash import no_update\n",
+    "import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app = dash.Dash(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clear the layout and do not display exception till callback gets executed\n",
+    "app.config.suppress_callback_exceptions = True\n",
+    "# Read the wildfire data into pandas dataframe\n",
+    "df =  pd.read_csv('https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DV0101EN-SkillsNetwork/Data%20Files/Historical_Wildfires.csv')\n",
+    "#Extract year and month from the date column\n",
+    "df['Month'] = pd.to_datetime(df['Date']).dt.month_name() #used for the names of the months\n",
+    "df['Year'] = pd.to_datetime(df['Date']).dt.year\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app.layout = html.Div(children=[html.H1('Australia Wildfire Dashboard', \n",
+    "                                style={'textAlign': 'center', 'color': '#503D36',\n",
+    "                                'font-size': 26}),\n",
+    "# TASK 2: Add the radio items and a dropdown right below the first inner division\n",
+    "     #outer division starts\n",
+    "     html.Div([\n",
+    "                   # First inner divsion for  adding dropdown helper text for Selected Drive wheels\n",
+    "                    html.Div([\n",
+    "                            html.H2('Select Region:', style={'margin-right': '2em'}),\n",
+    "                    #Radio items to select the region\n",
+    "                    #dcc.RadioItems(['NSW','QL','SA','TA','VI','WA'], 'NSW', id='region',inline=True)]),\n",
+    "                    dcc.RadioItems([{\"label\":\"New South Wales\",\"value\": \"NSW\"},\n",
+    "                                    {\"label\":\"Northern Territory\",\"value\": \"NT\"},\n",
+    "                                    {\"label\":\"Queensland\",\"value\": \"QL\"},\n",
+    "                                    {\"label\":\"South Australia\",\"value\": \"SA\"},\n",
+    "                                    {\"label\":\"Tasmania\",\"value\": \"TA\"},\n",
+    "                                    {\"label\":\"Victoria\",\"value\": \"VI\"},\n",
+    "                                    {\"label\":\"Western Australia\",\"value\": \"WA\"}],\"NSW\", id='region',inline=True)]),\n",
+    "                    #Dropdown to select year\n",
+    "                    html.Div([\n",
+    "                            html.H2('Select Year:', style={'margin-right': '2em'}),\n",
+    "                        dcc.Dropdown(df.Year.unique(), value = 2005,id='year')\n",
+    "                    ]),\n",
+    "#TASK 3: Add two empty divisions for output inside the next inner division. \n",
+    "         #Second Inner division for adding 2 inner divisions for 2 output graphs\n",
+    "                    html.Div([\n",
+    "                \n",
+    "                        html.Div([ ], id='plot1'),\n",
+    "                        html.Div([ ], id='plot2')\n",
+    "                    ], style={'display': 'flex'}),\n",
+    "    ])\n",
+    "    #outer division ends\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@app.callback([Output(component_id='plot1', component_property='children'),\n",
+    "               Output(component_id='plot2', component_property='children')],\n",
+    "               [Input(component_id='region', component_property='value'),\n",
+    "                Input(component_id='year', component_property='value')])\n",
+    "#TASK 5: Add the callback function.   \n",
+    "#Place to define the callback function .\n",
+    "def reg_year_display(input_region,input_year):  \n",
+    "    #data\n",
+    "   region_data = df[df['Region'] == input_region]\n",
+    "   y_r_data = region_data[region_data['Year']==input_year]\n",
+    "    #Plot one - Monthly Average Estimated Fire Area   \n",
+    "   est_data = y_r_data.groupby('Month')['Estimated_fire_area'].mean().reset_index()\n",
+    "   fig1 = px.pie(est_data, values='Estimated_fire_area', names='Month', title=\"{} : Monthly Average Estimated Fire Area in year {}\".format(input_region,input_year))   \n",
+    "     #Plot two - Monthly Average Count of Pixels for Presumed Vegetation Fires\n",
+    "   veg_data = y_r_data.groupby('Month')['Count'].mean().reset_index()\n",
+    "   fig2 = px.bar(veg_data, x='Month', y='Count', title='{} : Average Count of Pixels for Presumed Vegetation Fires in year {}'.format(input_region,input_year))    \n",
+    "   return [dcc.Graph(figure=fig1),\n",
+    "            dcc.Graph(figure=fig2) ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f6e9e9e5990>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    app.run_server()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +148,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py310",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
