--- a/Python Data Visualization/Automobile Dashboard.ipynb
+++ b/Python Data Visualization/Automobile Dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "4                5.3             770.4  Smallfamiliycar  California  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,38 +252,33 @@
     "        # grouping data for plotting\n",
     "        yearly_rec=recession_data.groupby('Year')['Automobile_Sales'].mean().reset_index()\n",
     "        # Plotting the line graph\n",
-    "        R_chart1 = dcc.Graph(\n",
+    "        chart1 = dcc.Graph(\n",
     "            figure=px.line(yearly_rec, \n",
     "                x='Year',\n",
     "                y='Automobile_Sales',\n",
     "                title=\"Automobile Sales across the Years\"))\n",
     "        average_sales = recession_data.groupby('Vehicle_Type')['Automobile_Sales'].mean().reset_index()                 \n",
-    "        R_chart2  = dcc.Graph(\n",
+    "        chart2  = dcc.Graph(\n",
     "            figure=px.bar(average_sales,\n",
     "                x='Vehicle_Type',\n",
     "                y='Automobile_Sales',\n",
     "                title=\"Vehicle Type and Sales\")\n",
     "                )\n",
     "        exp_rec= recession_data.groupby('Vehicle_Type')[\"Advertising_Expenditure\"].sum().reset_index()  \n",
-    "        R_chart3 = dcc.Graph(\n",
+    "        chart3 = dcc.Graph(\n",
     "            figure=px.pie(exp_rec,\n",
     "                values='Advertising_Expenditure',\n",
     "                names='Vehicle_Type',\n",
     "                title=\"Expenditure of Each Type during Recesion\")\n",
     "                )\n",
     "        unemp_data= recession_data.groupby(['Vehicle_Type', 'unemployment_rate'])['Automobile_Sales'].mean().reset_index()\n",
-    "        R_chart4 = dcc.Graph(figure=px.bar(unemp_data,\n",
+    "        chart4 = dcc.Graph(figure=px.bar(unemp_data,\n",
     "        x='Vehicle_Type',\n",
     "        y='Automobile_Sales',\n",
     "        color='unemployment_rate',\n",
     "        labels={'unemployment_rate': 'Unemployment Rate', 'Automobile_Sales': 'Average Automobile Sales'},\n",
     "        title='Effect of Unemployment Rate on Vehicle Type and Sales'))\n",
     "        \n",
-    "\n",
-    "        return[\n",
-    "                html.Div(className='chart-item', children=[html.Div(children=R_chart1),html.Div(children=R_chart2)],style={'display': 'flex'}),\n",
-    "                html.Div(className='chart-item', children=[html.Div(children=R_chart3),html.Div(children=R_chart4)],style={'display': 'flex'})\n",
-    "        ]\n",
     "\n",
     "    elif (select_year and selected_statistics=='Yearly Statistics') :\n",
     "        yearly_data = data[data['Year'] == select_year]\n",
@@ -294,14 +289,14 @@
     "        # grouping data for plotting.\n",
     "        # Hint:Use the columns Year and Automobile_Sales.\n",
     "        yas= data.groupby('Year')['Automobile_Sales'].mean().reset_index()\n",
-    "        Y_chart1 = dcc.Graph(figure=px.line(yas,x='Year',y='Automobile_Sales',title='Yearly Sales'))\n",
+    "        chart1 = dcc.Graph(figure=px.line(yas,x='Year',y='Automobile_Sales',title='Yearly Sales'))\n",
     "  \n",
     "    # Plot 2 :Total Monthly Automobile sales using line chart.\n",
     " \n",
     "            # grouping data for plotting.\n",
     "        # Hint:Use the columns Month and Automobile_Sales.\n",
     "        mas=data.groupby('Month')['Automobile_Sales'].sum().reset_index()\n",
-    "        Y_chart2 = dcc.Graph(figure=px.line(mas,\n",
+    "        chart2 = dcc.Graph(figure=px.line(mas,\n",
     "            x='Month',\n",
     "            y='Automobile_Sales',\n",
     "            title='Total Monthly Automobile Sales'))\n",
@@ -310,28 +305,34 @@
     "\n",
     "            # grouping data for plotting.\n",
     "            # Hint:Use the columns Year and Automobile_Sales\n",
-    "        avr_vdata=yearly_data.groupby('Vehicle_Type')[]\n",
-    "        Y_chart3 = dcc.Graph( figure=.................,title='Average Vehicles Sold by Vehicle Type in the year {}'.format(input_year)))\n",
+    "        avr_vdata=yearly_data.groupby('Vehicle_Type')['Automobile_Sales'].mean().reset_index()\n",
+    "        chart3 = dcc.Graph(figure=px.bar(avr_vdata,\n",
+    "                             title='Average Vehicles Sold by Vehicle Type in the year {}'.format(select_year),\n",
+    "                             x = 'Vehicle_Type',\n",
+    "                             y = 'Automobile_Sales'\n",
+    "                             ))\n",
+    "        \n",
+    "                            \n",
     "\n",
     "    # Plot 4 Total Advertisement Expenditure for each vehicle using pie chart\n",
     "            # grouping data for plotting.\n",
     "            # Hint:Use the columns Vehicle_Type and Advertising_Expenditure\n",
-    "            exp_data=yearly_data.groupby('.......')\n",
-    "        Y_chart4 = dcc.Graph(\n",
-    "            figure=px.pie(........., \n",
-    "            values='......',\n",
-    "            names='......',\n",
+    "        exp_data=yearly_data.groupby('Vehicle_Type')[\"Advertising_Expenditure\"].sum().reset_index()  \n",
+    "        chart4 = dcc.Graph(\n",
+    "            figure=px.pie(exp_data, \n",
+    "            values='Advertising_Expenditure',\n",
+    "            names='Vehicle_Type',\n",
     "            title='Total Advertisment Expenditure for Each Vehicle'))\n",
     "    return [\n",
-    "                html.Div(className='chart-item', children=[html.Div(children=Y_chart1),html.Div(children=Y_chart2)],style={'display':'flex'}),\n",
-    "                html.Div(className='chart-item', children=[html.Div(children=Y_chart3),html.Div(children=Y_chart4)],style={'display': 'flex'})\n",
-    "                ]\n",
+    "        html.Div(className='chart-item', children=[html.Div(children=chart1),html.Div(children=chart2)],style={'display':'flex'}),\n",
+    "        html.Div(className='chart-item', children=[html.Div(children=chart3),html.Div(children=chart4)],style={'display': 'flex'})\n",
+    "            ]\n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -349,16 +350,79 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fe795a751c0>"
+       "<IPython.lib.display.IFrame at 0x7fcd44f05b80>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-10-28 22:53:29,388] ERROR in app: Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/flask/app.py\", line 1473, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/flask/app.py\", line 882, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/flask/app.py\", line 880, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/flask/app.py\", line 865, in dispatch_request\n",
+      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/dash/dash.py\", line 1373, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/dash/_callback.py\", line 465, in add_context\n",
+      "    output_value = _invoke_callback(func, *func_args, **func_kwargs)\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/dash/_callback.py\", line 40, in _invoke_callback\n",
+      "    return func(*args, **kwargs)  # %% callback invoked %%\n",
+      "  File \"/tmp/ipykernel_72068/896407242.py\", line 99, in update_output_container\n",
+      "    html.Div(className='chart-item', children=[html.Div(children=chart1),html.Div(children=chart2)],style={'display':'flex'}),\n",
+      "UnboundLocalError: local variable 'chart1' referenced before assignment\n",
+      "[2024-10-28 22:53:30,286] ERROR in app: Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/flask/app.py\", line 1473, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/flask/app.py\", line 882, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/flask/app.py\", line 880, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/flask/app.py\", line 865, in dispatch_request\n",
+      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/dash/dash.py\", line 1373, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/dash/_callback.py\", line 465, in add_context\n",
+      "    output_value = _invoke_callback(func, *func_args, **func_kwargs)\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/dash/_callback.py\", line 40, in _invoke_callback\n",
+      "    return func(*args, **kwargs)  # %% callback invoked %%\n",
+      "  File \"/tmp/ipykernel_72068/896407242.py\", line 99, in update_output_container\n",
+      "    html.Div(className='chart-item', children=[html.Div(children=chart1),html.Div(children=chart2)],style={'display':'flex'}),\n",
+      "UnboundLocalError: local variable 'chart1' referenced before assignment\n",
+      "[2024-10-28 22:56:15,618] ERROR in app: Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/flask/app.py\", line 1473, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/flask/app.py\", line 882, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/flask/app.py\", line 880, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/flask/app.py\", line 865, in dispatch_request\n",
+      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/dash/dash.py\", line 1373, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/dash/_callback.py\", line 465, in add_context\n",
+      "    output_value = _invoke_callback(func, *func_args, **func_kwargs)\n",
+      "  File \"/home/zat/.local/lib/python3.8/site-packages/dash/_callback.py\", line 40, in _invoke_callback\n",
+      "    return func(*args, **kwargs)  # %% callback invoked %%\n",
+      "  File \"/tmp/ipykernel_72068/896407242.py\", line 99, in update_output_container\n",
+      "    html.Div(className='chart-item', children=[html.Div(children=chart1),html.Div(children=chart2)],style={'display':'flex'}),\n",
+      "UnboundLocalError: local variable 'chart1' referenced before assignment\n"
+     ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    app.run_server(jupyter_mode='external')"
+    "    app.run_server(jupyter_mode='inline')"
    ]
   },
   {
